changed how carousel displays images to stop stretching of images, now uses background-image

--- a/static/css/sass/_landing.scss
+++ b/static/css/sass/_landing.scss
@@ -2,7 +2,15 @@
     display: grid;
 }
 
-.carousel img {
+/* .carousel img {
+    height: 550px;
+} */
+
+.carousel-item {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
     height: 550px;
 }
 
