--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -258,7 +258,14 @@ a.user-link, a.bag-link {
   display: grid;
 }
 
-.carousel img {
+/* .carousel img {
+    height: 550px;
+} */
+.carousel-item {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: hidden;
   height: 550px;
 }
 
